@@ -114,6 +114,14 @@ Server response <b tal:content="response" i18n:name="response"></b></span>
 </p>
 
 <p>
+<span i18n:translate="">Coral Cache for</span>
+<a href="www.imadoofus.org.nyud.net:8090/index.pl"
+ tal:attributes="href coral_path"
+ tal:content="string:${size}${path}"
+>www.imadoofus.org/index.pl</a>
+</p>
+
+<p>
 <span style="" tal:replace="nothing">XXX use safeSearch parameter,
 see http://www.google.com/apis/reference.html</span>
 <span i18n:translate="">Search in
